# YouTubeStreamGTK

./: README.MD  meson.build  sm.puri.Stream.json
data/: meson.build  sm.puri.Stream.appdata.xml.in  sm.puri.Stream.desktop.in  sm.puri.Stream.gschema.xml  sm.puri.Stream.metainfo.xml.in
debian/: .control.swp  README.source  changelog  control  copyright  debhelper-build-stamp  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  stream-0.1.0.cron.d.ex  stream-0.1.0.doc-base.EX  watch.ex
debian/stream-0.1.0/DEBIAN/: control  md5sums
debian/stream-0.1.0/usr/share/appdata/: sm.puri.Stream.appdata.xml
debian/stream-0.1.0/usr/share/applications/: sm.puri.Stream.desktop
debian/stream-0.1.0/usr/share/doc/stream-0.1.0/: README.Debian
debian/stream-0.1.0/usr/share/stream/: stream.gresource
debian/stream-0.1.0/usr/share/stream/stream/: instances.py  results.py  window.py
po/: POTFILES  meson.build
src/: about.py  help.py  history.py  instances.py  iteroni.py  main.py  menu.py  meson.build  preferences.py  results.py  scrollers.py  search.py  stream.css  stream.gresource.xml  stream.in  window.py
src/ui/: about.ui  help-overlay.ui  help.ui  history.ui  menu.ui  preferences.ui  results.css  results.ui  scrollers.ui  stream.css  window.ui
